--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target test
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target test --parallel 4
 
     - name: Test
       working-directory: ${{github.workspace}}/build
