sembackup: use sha

--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.22)
 
 find_package(OpenSSL REQUIRED)
 
-add_library(crypto srcs/AES.cpp srcs/CRC32.cpp srcs/MD5.cpp)
+add_library(crypto srcs/AES.cpp srcs/CRC32.cpp srcs/SHA.cpp)
 
 target_include_directories(crypto PUBLIC includes)
 
