--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(crypto)
 add_subdirectory(filters)
 add_subdirectory(repo)
 add_subdirectory(utils)
+add_subdirectory(fuse)
 
 add_executable(backup main.cpp)
 target_link_libraries(backup PRIVATE change_detectors chunkers commands crypto filters repo utils)
