--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build
         # Build your program with the given configuration
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}  --parallel 4
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}  --parallel $(nproc)
 
       - name: Test
         working-directory: ${{github.workspace}}/build
