--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Debug
+  BUILD_TYPE: RelWithDebInfo
   SANITIZE: YES
 
 jobs:
@@ -37,4 +37,4 @@ jobs:
         working-directory: ${{github.workspace}}/build
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-        run: ctest --verbose -C ${{env.BUILD_TYPE}}
+        run: ctest --verbose --parallel $(nproc) -C ${{env.BUILD_TYPE}}
