--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,3 +14,5 @@ add_subdirectory(fuse)
 
 add_executable(backup main.cpp)
 target_link_libraries(backup PRIVATE change_detectors chunkers commands crypto filters repo utils)
+
+install(TARGETS backup DESTINATION bin)
