--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,12 +17,13 @@ jobs:
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
+    container: gcc
 
     steps:
       - uses: actions/checkout@v3
 
       - name: install everything
-        run: sudo apt-get install -y fuse libfuse-dev
+        run: sudo apt-get install -y fuse libfuse-dev cmake
 
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
