--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,9 +20,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
+      
+      - run: apt-get update && apt-get install -y sudo
+        if: env.ACT=='true'
+     
       - name: install everything
-        run: apt-get update && apt-get install -y fuse libfuse-dev cmake build-essential gcc g++ libssl-dev zlib1g-dev
+        run: sudo apt-get update && sudo apt-get install -y fuse libfuse-dev cmake build-essential gcc g++ libssl-dev zlib1g-dev
 
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
